--- a/index.html
+++ b/index.html
@@ -1,11 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Studio</title>
 </head>
 <body>
-  <h1>Welcome to our WEB STUDIO</h1>
+  <header class="container">
+    <p class="logo">Web 
+      <span class="header-logo-span">Studio</span>
+    </p>
+    <nav>
+      <a>Студия</a>
+      <a>Портфолио</a>
+      <a>Контакты</a>
+    </nav>
+    <ul class="header-contacts">
+      <li><a>info@devstudio.com</a></li>
+      <li><a>+38 096 111 11 11</a></li>
+    </ul>
+  </header>
+
+  <main class="container">
+    <h1 class="hidden">WEB STUDIO</h1>
+
+    <section class="order-section">
+      <p class="main-title">Эффективные решения для вашего бизнеса</p>
+      <button type="button">Заказать услугу</button>
+    </section>
+
+    <section class="about">
+      <ul class="description">
+        <li class="description-item">
+          <h3>Внимание к деталям</h3>
+          <p class="description-item-text">
+            Идейные соображения, а также начало повседневной работы по формированию позиции.
+          </p>
+        </li>
+        <li class="description-item">
+          <h3>Пунктуальность</h3>
+          <p class="description-item-text">
+            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+          </p>
+        </li>
+        <li class="description-item">
+          <h3>Планирование</h3>
+          <p class="description-item-text">
+            Равным образом консультация с широким активом в значительной степени обуславливает.
+          </p>
+        </li>
+        <li class="description-item">
+          <h3>Современные технологии</h3>
+          <p class="description-item-text">
+            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+          </p>
+        </li>
+      </ul>
+      <h2>Чем мы занимаемся</h2>
+      <ul class="images">
+        <li><img src="" alt="разработчик пишет код"/></li>
+        <li><img src="" alt="разработка мобильного приложения"/></li>
+        <li><img src="" alt="выбор цвета в планшете"/></li>
+      </ul>
+    </section>
+
+    <section class="team">
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <div class="card">
+            <img src="" alt="Product Designer photo"/>
+            <div class="card-info-wrapper">
+              <p class="name">Игорь Демьяненко</p>
+              <p class="position">Product Designer</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <img src="" alt="Frontend Developer photo"/>
+            <div class="card-info-wrapper">
+              <p class="name">Ольга Репина</p>
+              <p class="position">Frontend Developer</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <img src="" alt="Marketing photo"/>
+            <div class="card-info-wrapper">
+              <p class="name">Николай Тарасов</p>
+              <p class="position">Marketing</p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="card">
+            <img src="" alt="UI Designer photo"/>
+            <div class="card-info-wrapper">
+              <p class="name">Михаил Ермаков</p>
+              <p class="position">UI Designe</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer class="container">
+    <p class="logo">Web 
+      <span class="footer-logo-span">Studio</span>
+    </p>
+    <ul class="footer-contacts">
+      <li><a>г. Киев, пр-т Леси Украинки, 26</a></li>
+      <li><a>info@example.com</a></li>
+      <li><a>+38 096 111 11 11</a></li>
+    </ul>
+
+  </footer>
+
 </body>
 </html>
