add links in contacts (header, footer), fix p on h3 in employee cards

--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
 </head>
 <body>
   <header class="container">
-    <p class="logo">Web 
-      <span class="header-logo-span">Studio</span>
-    </p>
     <nav>
-      <a>Студия</a>
-      <a>Портфолио</a>
-      <a>Контакты</a>
+      <a href="/" class="logo">Web 
+        <span class="header-logo-span">Studio</span>
+      </a>
+      <div class="site-nav-links">
+        <a href="" >Студия</a>
+        <a href="">Портфолио</a>
+        <a href="">Контакты</a>
+      </div>
     </nav>
     <ul class="header-contacts">
-      <li><a>info@devstudio.com</a></li>
-      <li><a>+38 096 111 11 11</a></li>
+      <li><a href="mailto: info@example.com">info@example.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
 
   <main class="container">
     <h1 class="hidden">WEB STUDIO</h1>
 
-    <section class="order-section">
-      <p class="main-title">Эффективные решения для вашего бизнеса</p>
+    <section class="hero">
+      <p class="hero-title">Эффективные решения для вашего бизнеса</p>
       <button type="button">Заказать услугу</button>
     </section>
 
@@ -71,7 +73,7 @@
           <div class="card">
             <img src="" alt="Product Designer photo"/>
             <div class="card-info-wrapper">
-              <p class="name">Игорь Демьяненко</p>
+              <h3 class="name">Игорь Демьяненко</h3>
               <p class="position">Product Designer</p>
             </div>
           </div>
@@ -80,7 +82,7 @@
           <div class="card">
             <img src="" alt="Frontend Developer photo"/>
             <div class="card-info-wrapper">
-              <p class="name">Ольга Репина</p>
+              <h3 class="name">Ольга Репина</h3>
               <p class="position">Frontend Developer</p>
             </div>
           </div>
@@ -89,7 +91,7 @@
           <div class="card">
             <img src="" alt="Marketing photo"/>
             <div class="card-info-wrapper">
-              <p class="name">Николай Тарасов</p>
+              <h3 class="name">Николай Тарасов</h3>
               <p class="position">Marketing</p>
             </div>
           </div>
@@ -98,7 +100,7 @@
           <div class="card">
             <img src="" alt="UI Designer photo"/>
             <div class="card-info-wrapper">
-              <p class="name">Михаил Ермаков</p>
+              <h3 class="name">Михаил Ермаков</h3>
               <p class="position">UI Designe</p>
             </div>
           </div>
@@ -112,9 +114,9 @@
       <span class="footer-logo-span">Studio</span>
     </p>
     <ul class="footer-contacts">
-      <li><a>г. Киев, пр-т Леси Украинки, 26</a></li>
-      <li><a>info@example.com</a></li>
-      <li><a>+38 096 111 11 11</a></li>
+      <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265064,30.5380961,19z/data=!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?entry=ttu&g_ep=EgoyMDI0MDkwNC4wIKXMDSoASAFQAw%3D%3D">г. Киев, пр-т Леси Украинки, 26</a></li>
+      <li><a href="mailto: info@example.com">info@example.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 
   </footer>
